<resources>
    <string name="app_name">ProjetoV2</string>
    <string name="label_disciplina">Disciplina</string>
    <string name="label_faltas">Faltas</string>
    <string name="descricao_btn_inicial">Cadastrar nova disciplina</string>
    <string name="campos_obrigatorios">(* Campo obrigatório)</string>
    <string name="nome_disciplina_text">Nome da disciplina*</string>
    <string name="txt_total_aulas">Total de aulas da disciplina*</string>
    <string name="faltas_que_tem">Faltas que já possui</string>
    <string name="percent_faltas_possiveis_text">Porcentagem de faltas possíveis*</string>
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="numero_aulas">Total de aulas da discplina:</string>
    <string name="faltas">Faltas que já tem:</string>
    <string name="faltas_possiveis">Faltas que ainda pode ter:</string>
    <string name="btn_adicionar_falta">Adicionar falta</string>
    <string name="txt_form_editar">Editar ou excluir matéria</string>
    <string name="txt_alterar_nome_disciplina">Editar nome da disciplina</string>
    <string name="txt_alterar_porcentagem_aulas">Editar porcentagem de faltas possiveis</string>
    <string name="txt_btn_editar">Editar</string>
    <string name="txt_btn_excluir">Excluir Materia</string>
</resources>
