<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/grid_tela_resumo"
    android:layout_margin="5dp"
    android:padding="2dp"
    android:rowCount="4"
    android:columnCount="2"
    android:background="#C0D9D9">

    <TextView
        android:id="@+id/nome_materia"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25sp"
        android:padding="2dp"/>

    <TextView
        android:layout_row="1"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_aulas"
        android:padding="2dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/numero_aulas"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="2dp"
        android:textSize="12sp"/>

    <TextView
        android:layout_row="2"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faltas_que_tem"
        android:padding="2dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/faltas_que_possui"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="2dp"
        android:textSize="12sp"/>

    <TextView
        android:layout_row="3"
        android:layout_column="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faltas_possiveis"
        android:padding="2dp"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/total_faltas_possiveis"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:padding="2dp"
        android:textSize="12sp"/>

</GridLayout>